--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -14,13 +14,13 @@ on:
     types: [started]
 
 env:
-  MANIFEST: git://github.com/SKYHAWK-Recovery-Project/platform_manifest_twrp_omni.git -b android-9.0
-  DEVICE: rosy
-  DT_LINK: https://github.com/JamieHoSzeYui/android_recovery_xiaomi_rosy
-  DT_PATH: device/xiaomi/rosy
-  KERNEL_LINK: https://github.com/Pulkit077/kernel_xiaomi_rosy
-  KERNEL_PATH: kernel/xiaomi/rosy
-  TARGET: recoveryimage
+  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-11
+  DEVICE: kyoto
+  DT_LINK: https://github.com/forforksake/android_device_motorola_kyoto
+  DT_PATH: device/motorola/kyoto
+  KERNEL_LINK: https://github.com/forforksake/android_kernel_motorola_kyoto
+  KERNEL_PATH: kernel/motorola/kyoto
+  TARGET: bootimage
   TZ: Asia/Kolkata
 
 jobs:
